# openbaopy

./: README.md  pyproject.toml
.github/workflows/: linting.yml
openbaopy/: bao.py  exceptions.py
