[build-system]
requires = ["setuptools==80.7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "openbaopy"
version = "1.0.0"
description = "OpenBao client library"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE"}

dependencies = [
    "requests-unixsocket==0.4.1",
    "urllib3==2.4.0",
    "hvac==2.3.0"
    ]

[project.urls]
Homepage = "https://github.com/PortalMario/openbaopy"
